--- a/index.html
+++ b/index.html
@@ -1,72 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>website-template</title>
-        <link rel="shortcut icon" href="/assets/images/favicon-32x32.png" type="image/x-icon">
-        <link type="text/css" rel="stylesheet" href="/assets/css/style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>website-template</title>
+    <link rel="shortcut icon" href="/assets/images/favicon-32x32.png" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="/assets/css/style.css">
+</head>
 
-    <body>
+<body>
 
-        <div class="container">
-            <div class="preview-container">
-
-                <!-- SEDANS -->
-                <div class="preview" style="--color:hsl(31, 77%, 52%)">
-                    <div class="preview__header">
-                        <img class="preview__icon" src="/assets/images/icon-sedans.svg" alt="sedan icons">
-                        <p class="preview__heading">SEDANS</p>
-                    </div>
-                    <div class="preview__body">
-                        <p class="preview__content">
-                            Chose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the
-                            city
-                            or on your
-                            next road trip.
-                        </p>
-                        <button class="btn">Learn More</button>
-                    </div>
+    <main class="flex-center">
+        <!-- PREVIEWS-SECTION -->
+        <section class="previews">
+            <!-- SEDANS -->
+            <article class="preview" style="--color:hsl(31, 77%, 52%)">
+                <div class="preview__header">
+                    <img class="preview__icon" src="/assets/images/icon-sedans.svg" alt="sedan icons">
+                    <p class="preview__heading">SEDANS</p>
                 </div>
-
-                <!-- SUVS -->
-                <div class="preview" style="--color:hsl(184, 100%, 22%)">
-                    <div class="preview__header">
-                        <img class="preview__icon" src="/assets/images/icon-suvs.svg" alt="suvs icons">
-                        <h2 class="preview__heading">SUVS</h2>
-                    </div>
-                    <div class="preview__body">
-                        <p class="preview__content">
-                            Take an SUV for its spacious interior, power, and versability. Perfect for your next family
-                            vacation and off-road adventures.
-                        </p>
-                        <button class="btn">Learn More</button>
-                    </div>
+                <div class="preview__body">
+                    <p class="preview__content">
+                        Chose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the
+                        city
+                        or on your
+                        next road trip.
+                    </p>
+                    <button class="btn">Learn More</button>
                 </div>
+            </article>
 
-                <!-- LUXURY -->
-                <div class="preview" style="--color:hsl(179, 100%, 13%)">
-                    <div class="preview__header">
-                        <img class="preview__icon" src="/assets/images/icon-luxury.svg" alt="luxury icons">
-                        <h2 class="preview__heading">LUXURY</h2>
-                    </div>
-                    <div class="preview__body">
-                        <p class="preview__content">
-                            Chose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the
-                            city
-                            or on your
-                            next road trip.
-                        </p>
-                        <button class="btn">Learn More</button>
-                    </div>
+            <!-- SUVS -->
+            <article class="preview" style="--color:hsl(184, 100%, 22%)">
+                <div class="preview__header">
+                    <img class="preview__icon" src="/assets/images/icon-suvs.svg" alt="suvs icons">
+                    <h2 class="preview__heading">SUVS</h2>
                 </div>
-            </div>
-        </div>
+                <div class="preview__body">
+                    <p class="preview__content">
+                        Take an SUV for its spacious interior, power, and versability. Perfect for your next family
+                        vacation and off-road adventures.
+                    </p>
+                    <button class="btn">Learn More</button>
+                </div>
+            </article>
 
-        <script src="/app/main.js"></script>
-    </body>
+            <!-- LUXURY -->
+            <article class="preview" style="--color:hsl(179, 100%, 13%)">
+                <div class="preview__header">
+                    <img class="preview__icon" src="/assets/images/icon-luxury.svg" alt="luxury icons">
+                    <h2 class="preview__heading">LUXURY</h2>
+                </div>
+                <div class="preview__body">
+                    <p class="preview__content">
+                        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of the
+                        luxury rental and arrive in style.
+                    </p>
+                    <button class="btn">Learn More</button>
+                </div>
+            </article>
+        </section>
+
+    </main>
+
+</body>
 
 </html>
